--- a/example/climate_index.ipynb
+++ b/example/climate_index.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
        "<AxesSubplot:xlabel='month'>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -356,19 +356,172 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## ENSO Event calc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>month</th>\n",
+       "      <th>nina34a</th>\n",
+       "      <th>pdo</th>\n",
+       "      <th>soi</th>\n",
+       "      <th>enso_event</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>1950-06-01</td>\n",
+       "      <td>-1.27</td>\n",
+       "      <td>-1.77</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>1950-07-01</td>\n",
+       "      <td>-1.01</td>\n",
+       "      <td>-2.93</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>1950-08-01</td>\n",
+       "      <td>-0.97</td>\n",
+       "      <td>-0.70</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>1950-09-01</td>\n",
+       "      <td>-0.98</td>\n",
+       "      <td>-2.14</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>1950-10-01</td>\n",
+       "      <td>-1.03</td>\n",
+       "      <td>-1.36</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>896</th>\n",
+       "      <td>2022-09-01</td>\n",
+       "      <td>-1.07</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.7</td>\n",
+       "      <td>-1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>897</th>\n",
+       "      <td>2022-10-01</td>\n",
+       "      <td>-0.98</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.8</td>\n",
+       "      <td>-1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>898</th>\n",
+       "      <td>2022-11-01</td>\n",
+       "      <td>-0.90</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>-1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>899</th>\n",
+       "      <td>2022-12-01</td>\n",
+       "      <td>-0.85</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>-1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>900</th>\n",
+       "      <td>2023-01-01</td>\n",
+       "      <td>-0.75</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>-1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>411 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         month  nina34a   pdo  soi  enso_event\n",
+       "29  1950-06-01    -1.27 -1.77  NaN        -1.0\n",
+       "30  1950-07-01    -1.01 -2.93  NaN        -1.0\n",
+       "31  1950-08-01    -0.97 -0.70  NaN        -1.0\n",
+       "32  1950-09-01    -0.98 -2.14  NaN        -1.0\n",
+       "33  1950-10-01    -1.03 -1.36  NaN        -1.0\n",
+       "..         ...      ...   ...  ...         ...\n",
+       "896 2022-09-01    -1.07   NaN  2.7        -1.0\n",
+       "897 2022-10-01    -0.98   NaN  2.8        -1.0\n",
+       "898 2022-11-01    -0.90   NaN  0.5        -1.0\n",
+       "899 2022-12-01    -0.85   NaN  3.5        -1.0\n",
+       "900 2023-01-01    -0.75   NaN  2.3        -1.0\n",
+       "\n",
+       "[411 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from maesters_of_clim.analysis import enso_event\n",
+    "df['enso_event'] = enso_event(df, column='nina34a', temp=0.5, months=6)\n",
+    "df[~df['enso_event'].isna()]"
+   ]
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "0d37fb675408f2ad976ccac53271729d7bf171f6b6351508f41e3cfc1d2f1a89"
-  },
   "kernelspec": {
-   "display_name": "Python 3.10.4 64-bit ('maesters')",
+   "display_name": "maesters",
    "language": "python",
    "name": "python3"
   },
@@ -384,7 +537,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.10.4"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "ae7ef8b6acc0a4a397410b8c3571b17de9468b40712ea8d43df7838dd2cad543"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
