feat: extend available index

--- a/example/climate_index.ipynb
+++ b/example/climate_index.ipynb
@@ -55,6 +55,47 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ncei': ['ninaa', 'nina', 'pdo', 'amo', 'iod'],\n",
+       " 'psl': ['nina34a',\n",
+       "  'nina4a',\n",
+       "  'nina3a',\n",
+       "  'nina1a',\n",
+       "  'soi',\n",
+       "  'oni',\n",
+       "  'tni',\n",
+       "  'censo',\n",
+       "  'ao',\n",
+       "  'pdo',\n",
+       "  'wp',\n",
+       "  'amo_us',\n",
+       "  'amo_sm',\n",
+       "  'dmi',\n",
+       "  'dmiwest',\n",
+       "  'dmieast',\n",
+       "  'nao',\n",
+       "  'np',\n",
+       "  'tpi',\n",
+       "  'glbts',\n",
+       "  'glbtssst']}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Climate_Maester.list_history_indexes()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -687,6 +728,392 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Mean</th>\n",
+       "      <th>N2K1</th>\n",
+       "      <th>N3K2V</th>\n",
+       "      <th>N2K2hiV</th>\n",
+       "      <th>N1K1hi</th>\n",
+       "      <th>N1K2</th>\n",
+       "      <th>N3K2hiV</th>\n",
+       "      <th>N3K1V</th>\n",
+       "      <th>F2-Mean</th>\n",
+       "      <th>F2-3DVAR-Mean</th>\n",
+       "      <th>...</th>\n",
+       "      <th>sfe41d</th>\n",
+       "      <th>N3K2hi</th>\n",
+       "      <th>N2K2V</th>\n",
+       "      <th>N2K1V</th>\n",
+       "      <th>sfe31d</th>\n",
+       "      <th>sfe33d</th>\n",
+       "      <th>N2K2</th>\n",
+       "      <th>N1K2V</th>\n",
+       "      <th>Forecast_Month</th>\n",
+       "      <th>Release_Month</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.864826</td>\n",
+       "      <td>0.852731</td>\n",
+       "      <td>1.391649</td>\n",
+       "      <td>1.027814</td>\n",
+       "      <td>1.231974</td>\n",
+       "      <td>0.658067</td>\n",
+       "      <td>1.029337</td>\n",
+       "      <td>1.086232</td>\n",
+       "      <td>0.705422</td>\n",
+       "      <td>1.024229</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.392148</td>\n",
+       "      <td>1.360647</td>\n",
+       "      <td>1.096233</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.586874</td>\n",
+       "      <td>1.042363</td>\n",
+       "      <td>2023-12</td>\n",
+       "      <td>2023-11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.693144</td>\n",
+       "      <td>0.643113</td>\n",
+       "      <td>0.799456</td>\n",
+       "      <td>0.775818</td>\n",
+       "      <td>0.914116</td>\n",
+       "      <td>0.568564</td>\n",
+       "      <td>0.656026</td>\n",
+       "      <td>1.061512</td>\n",
+       "      <td>0.606217</td>\n",
+       "      <td>0.780071</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.578027</td>\n",
+       "      <td>0.637246</td>\n",
+       "      <td>0.903040</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.879329</td>\n",
+       "      <td>0.787127</td>\n",
+       "      <td>2024-01</td>\n",
+       "      <td>2023-11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.164003</td>\n",
+       "      <td>-0.001132</td>\n",
+       "      <td>0.402743</td>\n",
+       "      <td>-0.233181</td>\n",
+       "      <td>0.226465</td>\n",
+       "      <td>-0.015045</td>\n",
+       "      <td>0.596027</td>\n",
+       "      <td>0.521986</td>\n",
+       "      <td>0.104757</td>\n",
+       "      <td>0.223248</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.422658</td>\n",
+       "      <td>0.923663</td>\n",
+       "      <td>0.324694</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.035070</td>\n",
+       "      <td>-0.205428</td>\n",
+       "      <td>2024-02</td>\n",
+       "      <td>2023-11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-0.054737</td>\n",
+       "      <td>0.201489</td>\n",
+       "      <td>0.070049</td>\n",
+       "      <td>-0.310218</td>\n",
+       "      <td>0.164510</td>\n",
+       "      <td>-0.203800</td>\n",
+       "      <td>0.268819</td>\n",
+       "      <td>-0.476760</td>\n",
+       "      <td>-0.038085</td>\n",
+       "      <td>-0.071388</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.042473</td>\n",
+       "      <td>0.128160</td>\n",
+       "      <td>0.346698</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.196848</td>\n",
+       "      <td>-0.349359</td>\n",
+       "      <td>2024-03</td>\n",
+       "      <td>2023-11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.025079</td>\n",
+       "      <td>0.114816</td>\n",
+       "      <td>0.295845</td>\n",
+       "      <td>-0.566731</td>\n",
+       "      <td>0.101067</td>\n",
+       "      <td>0.300536</td>\n",
+       "      <td>-0.140333</td>\n",
+       "      <td>-0.175871</td>\n",
+       "      <td>0.068239</td>\n",
+       "      <td>-0.018081</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.200811</td>\n",
+       "      <td>-0.106144</td>\n",
+       "      <td>0.220650</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.292427</td>\n",
+       "      <td>-0.143925</td>\n",
+       "      <td>2024-04</td>\n",
+       "      <td>2023-11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.048468</td>\n",
+       "      <td>-0.321668</td>\n",
+       "      <td>-0.314554</td>\n",
+       "      <td>-0.083253</td>\n",
+       "      <td>0.355631</td>\n",
+       "      <td>0.520656</td>\n",
+       "      <td>-0.509384</td>\n",
+       "      <td>-0.250982</td>\n",
+       "      <td>0.064869</td>\n",
+       "      <td>0.032068</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.729994</td>\n",
+       "      <td>0.162401</td>\n",
+       "      <td>-0.027692</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.028820</td>\n",
+       "      <td>0.452147</td>\n",
+       "      <td>2024-05</td>\n",
+       "      <td>2023-11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>-0.029192</td>\n",
+       "      <td>-0.665404</td>\n",
+       "      <td>-0.083909</td>\n",
+       "      <td>0.173352</td>\n",
+       "      <td>0.481325</td>\n",
+       "      <td>0.596224</td>\n",
+       "      <td>-0.437844</td>\n",
+       "      <td>-0.582283</td>\n",
+       "      <td>-0.026888</td>\n",
+       "      <td>-0.031495</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.719346</td>\n",
+       "      <td>0.516146</td>\n",
+       "      <td>-0.783964</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.074662</td>\n",
+       "      <td>0.136565</td>\n",
+       "      <td>2024-06</td>\n",
+       "      <td>2023-11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>-0.102502</td>\n",
+       "      <td>-0.609292</td>\n",
+       "      <td>-0.190814</td>\n",
+       "      <td>0.120524</td>\n",
+       "      <td>0.525676</td>\n",
+       "      <td>1.210806</td>\n",
+       "      <td>-0.694265</td>\n",
+       "      <td>-1.018683</td>\n",
+       "      <td>-0.011541</td>\n",
+       "      <td>-0.193464</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.829673</td>\n",
+       "      <td>0.299437</td>\n",
+       "      <td>-0.732081</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.101568</td>\n",
+       "      <td>0.316395</td>\n",
+       "      <td>2024-07</td>\n",
+       "      <td>2023-11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>-0.330929</td>\n",
+       "      <td>-0.469554</td>\n",
+       "      <td>-0.297916</td>\n",
+       "      <td>-0.495550</td>\n",
+       "      <td>0.255466</td>\n",
+       "      <td>1.575441</td>\n",
+       "      <td>-1.222670</td>\n",
+       "      <td>-1.803841</td>\n",
+       "      <td>-0.058657</td>\n",
+       "      <td>-0.603202</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.751265</td>\n",
+       "      <td>-0.334907</td>\n",
+       "      <td>-1.291626</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.009973</td>\n",
+       "      <td>0.582475</td>\n",
+       "      <td>2024-08</td>\n",
+       "      <td>2023-11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>-0.623000</td>\n",
+       "      <td>-1.034516</td>\n",
+       "      <td>0.005241</td>\n",
+       "      <td>-0.592927</td>\n",
+       "      <td>0.145991</td>\n",
+       "      <td>1.622889</td>\n",
+       "      <td>-1.574323</td>\n",
+       "      <td>-2.292726</td>\n",
+       "      <td>-0.263819</td>\n",
+       "      <td>-0.982181</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.672980</td>\n",
+       "      <td>-0.820570</td>\n",
+       "      <td>-1.742812</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.590384</td>\n",
+       "      <td>0.298593</td>\n",
+       "      <td>2024-09</td>\n",
+       "      <td>2023-11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2024-10</td>\n",
+       "      <td>2023-11</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>11 rows × 39 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Mean      N2K1     N3K2V   N2K2hiV    N1K1hi      N1K2   N3K2hiV  \\\n",
+       "0   0.864826  0.852731  1.391649  1.027814  1.231974  0.658067  1.029337   \n",
+       "1   0.693144  0.643113  0.799456  0.775818  0.914116  0.568564  0.656026   \n",
+       "2   0.164003 -0.001132  0.402743 -0.233181  0.226465 -0.015045  0.596027   \n",
+       "3  -0.054737  0.201489  0.070049 -0.310218  0.164510 -0.203800  0.268819   \n",
+       "4   0.025079  0.114816  0.295845 -0.566731  0.101067  0.300536 -0.140333   \n",
+       "5   0.048468 -0.321668 -0.314554 -0.083253  0.355631  0.520656 -0.509384   \n",
+       "6  -0.029192 -0.665404 -0.083909  0.173352  0.481325  0.596224 -0.437844   \n",
+       "7  -0.102502 -0.609292 -0.190814  0.120524  0.525676  1.210806 -0.694265   \n",
+       "8  -0.330929 -0.469554 -0.297916 -0.495550  0.255466  1.575441 -1.222670   \n",
+       "9  -0.623000 -1.034516  0.005241 -0.592927  0.145991  1.622889 -1.574323   \n",
+       "10       NaN       NaN       NaN       NaN       NaN       NaN       NaN   \n",
+       "\n",
+       "       N3K1V   F2-Mean  F2-3DVAR-Mean  ...  sfe41d    N3K2hi     N2K2V  \\\n",
+       "0   1.086232  0.705422       1.024229  ...     NaN  0.392148  1.360647   \n",
+       "1   1.061512  0.606217       0.780071  ...     NaN  0.578027  0.637246   \n",
+       "2   0.521986  0.104757       0.223248  ...     NaN  0.422658  0.923663   \n",
+       "3  -0.476760 -0.038085      -0.071388  ...     NaN -0.042473  0.128160   \n",
+       "4  -0.175871  0.068239      -0.018081  ...     NaN  0.200811 -0.106144   \n",
+       "5  -0.250982  0.064869       0.032068  ...     NaN  0.729994  0.162401   \n",
+       "6  -0.582283 -0.026888      -0.031495  ...     NaN  0.719346  0.516146   \n",
+       "7  -1.018683 -0.011541      -0.193464  ...     NaN  0.829673  0.299437   \n",
+       "8  -1.803841 -0.058657      -0.603202  ...     NaN  0.751265 -0.334907   \n",
+       "9  -2.292726 -0.263819      -0.982181  ...     NaN  0.672980 -0.820570   \n",
+       "10       NaN       NaN            NaN  ...     NaN       NaN       NaN   \n",
+       "\n",
+       "       N2K1V  sfe31d  sfe33d      N2K2     N1K2V  Forecast_Month  \\\n",
+       "0   1.096233     NaN     NaN  0.586874  1.042363         2023-12   \n",
+       "1   0.903040     NaN     NaN  0.879329  0.787127         2024-01   \n",
+       "2   0.324694     NaN     NaN  0.035070 -0.205428         2024-02   \n",
+       "3   0.346698     NaN     NaN  0.196848 -0.349359         2024-03   \n",
+       "4   0.220650     NaN     NaN -0.292427 -0.143925         2024-04   \n",
+       "5  -0.027692     NaN     NaN -0.028820  0.452147         2024-05   \n",
+       "6  -0.783964     NaN     NaN  0.074662  0.136565         2024-06   \n",
+       "7  -0.732081     NaN     NaN  0.101568  0.316395         2024-07   \n",
+       "8  -1.291626     NaN     NaN  0.009973  0.582475         2024-08   \n",
+       "9  -1.742812     NaN     NaN -0.590384  0.298593         2024-09   \n",
+       "10       NaN     NaN     NaN       NaN       NaN         2024-10   \n",
+       "\n",
+       "    Release_Month  \n",
+       "0         2023-11  \n",
+       "1         2023-11  \n",
+       "2         2023-11  \n",
+       "3         2023-11  \n",
+       "4         2023-11  \n",
+       "5         2023-11  \n",
+       "6         2023-11  \n",
+       "7         2023-11  \n",
+       "8         2023-11  \n",
+       "9         2023-11  \n",
+       "10        2023-11  \n",
+       "\n",
+       "[11 rows x 39 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c = Climate_Maester('dmi', 'jamstec')\n",
+    "dmidf = c.forecast()\n",
+    "dmidf"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -848,6 +1275,13 @@
     "df['enso_event'] = enso_event(df, column='nina34a', temp=0.5, months=5)\n",
     "df[~df['enso_event'].isna()]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
